--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -183,7 +183,7 @@ h6,
 
 .saint-text {
   font-family: 'Mrs Saint Delafield';
-  color: #d05278;
+  color:#f8cfa9;
   display: block;
   font-size: 50px;
   text-transform: capitalize;
@@ -198,7 +198,7 @@ h6,
   margin-top: 4px;
 
   span {
-    color: #d05278;
+    color:#f8cfa9;
     position: relative;
 
     &:before {
@@ -330,7 +330,7 @@ h6,
 
       &.active {
         a {
-          background: #d05278;
+          background:#f8cfa9;
           color: #ffffff;
         }
       }
@@ -418,7 +418,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background: #d05278;
+            background:#f8cfa9;
             color: #fff;
           }
 
@@ -427,7 +427,7 @@ h6,
           }
 
           &.active {
-            background: #d05278;
+            background:#f8cfa9;
             color: #fff;
           }
         }
@@ -1050,7 +1050,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color: #d05278;
+      color:#f8cfa9;
     }
   }
 
@@ -1300,7 +1300,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color: #d05278;
+    color:#f8cfa9;
     position: relative;
 
     &:after {
@@ -1316,7 +1316,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color: #d05278;
+        color:#f8cfa9;
       }
     }
 
@@ -1383,7 +1383,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color: #d05278;
+      color:#f8cfa9;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1804,7 +1804,7 @@ h6,
       }
 
       .faq-item__head {
-        color: #d05278;
+        color:#f8cfa9;
       }
 
       .faq-item__head-btn {
@@ -2350,7 +2350,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color: #d05278;
+  color:#f8cfa9;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2450,11 +2450,11 @@ blockquote,
             }
 
             &:hover {
-              color: #d05278;
-              border-color: #d05278;
+              color:#f8cfa9;
+              border-color:#f8cfa9;
 
               span {
-                color: #d05278;
+                color:#f8cfa9;
               }
             }
           }
@@ -2465,22 +2465,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px #d05278;
-          background-color: #d05278;
+          border: solid 2px#f8cfa9;
+          background-color:#f8cfa9;
 
           &:hover {
-            border-color: #d05278;
+            border-color:#f8cfa9;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color: #d05278;
-          box-shadow: 0 0 5px #d05278;
+          border-color:#f8cfa9;
+          box-shadow: 0 0 5px#f8cfa9;
         }
 
         .rc-slider-track {
-          background-color: #d05278;
+          background-color:#f8cfa9;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2540,7 +2540,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color: #d05278;
+            color:#f8cfa9;
           }
         }
       }
@@ -2638,13 +2638,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color: #d05278;
+    background-color:#f8cfa9;
   }
 
   .irs-handle {
-    background-color: #d05278;
+    background-color:#f8cfa9;
     box-shadow: none;
-    border-color: #d05278;
+    border-color:#f8cfa9;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2652,7 +2652,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color: #d05278;
+      background-color:#f8cfa9;
     }
   }
 
@@ -2724,7 +2724,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color: #d05278;
+  background-color:#f8cfa9;
 }
 
 .checkmark:after {
@@ -2801,7 +2801,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color: #d05278;
+        color:#f8cfa9;
       }
     }
   }
@@ -2874,7 +2874,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid #d05278;
+          border: 2px solid#f8cfa9;
 
           &:hover {
             &:after {
@@ -2886,7 +2886,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid #d05278;
+          border: 2px solid#f8cfa9;
         }
       }
     }
@@ -2970,7 +2970,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid #d05278;
+          border: 2px solid#f8cfa9;
         }
       }
     }
@@ -3080,8 +3080,8 @@ blockquote,
 
     &.active {
       // a {
-      background: #d05278;
-      border-color: #d05278;
+      background:#f8cfa9;
+      border-color:#f8cfa9;
       color: #ffffff;
     }
   }
@@ -3313,7 +3313,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color: #d05278;
+          color:#f8cfa9;
         }
       }
 
@@ -3776,7 +3776,7 @@ blockquote,
           }
 
           &:hover {
-            color: #d05278;
+            color:#f8cfa9;
           }
         }
       }
@@ -3983,7 +3983,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #d05278;
+  background:#f8cfa9;
 }
 
 .checkout-purchase {
@@ -4019,7 +4019,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color: #d05278;
+    color:#f8cfa9;
     display: block;
 
     &:hover {
@@ -4140,7 +4140,7 @@ blockquote,
       }
 
       a {
-        color: #d05278;
+        color:#f8cfa9;
         cursor: pointer;
 
         &:hover {
@@ -4357,7 +4357,7 @@ input[type='search']::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color: #d05278;
+            color:#f8cfa9;
           }
         }
 
@@ -4386,7 +4386,7 @@ input[type='search']::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color: #d05278;
+          color:#f8cfa9;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4585,7 +4585,7 @@ input[type='search']::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color: #d05278;
+          color:#f8cfa9;
         }
 
         &-delivered {
@@ -4614,7 +4614,7 @@ input[type='search']::-webkit-search-results-decoration {
           }
 
           &:after {
-            background: #d05278;
+            background:#f8cfa9;
           }
         }
       }
@@ -4717,7 +4717,7 @@ input[type='search']::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color: #d05278;
+      color:#f8cfa9;
     }
 
     &:hover {
