--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -158,3 +158,18 @@
 .icon-video:before {
   content: '\e917';
 }
+.spinner {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background: #f8cfa9;
+  -webkit-mask: radial-gradient(circle closest-side at 50% 40%,#0000 94%, #000);
+  transform-origin: 50% 40%;
+  animation: spinner-pl92zb 1s infinite linear;
+}
+
+@keyframes spinner-pl92zb {
+  100% {
+     transform: rotate(1turn);
+  }
+}
