--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -560,6 +560,7 @@ h6,
   justify-content: center;
   align-items: center;
   padding-bottom: 130px;
+  flex-wrap: wrap;
 
   img {
     margin: 0 56px;
