--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -32,7 +32,7 @@
 }
 .icon-info:before {
   content: '\e923';
-  color:#f8cfa9;
+  color: #d05278;
 }
 .icon-star:before {
   content: '\e91f';
@@ -62,7 +62,7 @@
 }
 .icon-reply:before {
   content: '\e91d';
-  color:#f8cfa9;
+  color: #d05278;
 }
 .icon-user2:before {
   content: '\e91e';
@@ -70,7 +70,7 @@
 }
 .icon-arrow-md:before {
   content: '\e919';
-  color:#f8cfa9;
+  color: #d05278;
 }
 .icon-arrow-sm:before {
   content: '\e918';
@@ -117,11 +117,11 @@
 }
 .icon-mail:before {
   content: '\e90b';
-  color:#f8cfa9;
+  color: #d05278;
 }
 .icon-map-pin:before {
   content: '\e90c';
-  color:#f8cfa9;
+  color: #d05278;
 }
 .icon-map-pin-big:before {
   content: '\e90d';
@@ -146,7 +146,7 @@
 }
 .icon-smartphone:before {
   content: '\e914';
-  color:#f8cfa9;
+  color: #d05278;
 }
 .icon-twitter:before {
   content: '\e915';
@@ -157,19 +157,4 @@
 }
 .icon-video:before {
   content: '\e917';
-}
-.spinner {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  background: #f8cfa9;
-  -webkit-mask: radial-gradient(circle closest-side at 50% 40%,#0000 94%, #000);
-  transform-origin: 50% 40%;
-  animation: spinner-pl92zb 1s infinite linear;
-}
-
-@keyframes spinner-pl92zb {
-  100% {
-     transform: rotate(1turn);
-  }
 }
