--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -183,7 +183,7 @@ h6,
 
 .saint-text {
   font-family: 'Mrs Saint Delafield';
-  color:#f8cfa9;
+  color: #d05278;
   display: block;
   font-size: 50px;
   text-transform: capitalize;
@@ -198,7 +198,7 @@ h6,
   margin-top: 4px;
 
   span {
-    color:#f8cfa9;
+    color: #d05278;
     position: relative;
 
     &:before {
@@ -330,7 +330,7 @@ h6,
 
       &.active {
         a {
-          background:#f8cfa9;
+          background: #d05278;
           color: #ffffff;
         }
       }
@@ -418,7 +418,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background:#f8cfa9;
+            background: #d05278;
             color: #fff;
           }
 
@@ -427,7 +427,7 @@ h6,
           }
 
           &.active {
-            background:#f8cfa9;
+            background: #d05278;
             color: #fff;
           }
         }
@@ -560,7 +560,6 @@ h6,
   justify-content: center;
   align-items: center;
   padding-bottom: 130px;
-  flex-wrap: wrap;
 
   img {
     margin: 0 56px;
@@ -616,14 +615,13 @@ h6,
 // advantages
 
 .advantages {
-  padding-top: 100px;
+  padding-top: 190px;
 
   &-items {
     display: flex;
     justify-content: center;
     margin-left: -12px;
     margin-right: -12px;
-    flex-wrap: wrap;
   }
 
   &-item {
@@ -1052,7 +1050,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color:#f8cfa9;
+      color: #d05278;
     }
   }
 
@@ -1302,7 +1300,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color:#f8cfa9;
+    color: #d05278;
     position: relative;
 
     &:after {
@@ -1318,7 +1316,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color:#f8cfa9;
+        color: #d05278;
       }
     }
 
@@ -1385,7 +1383,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color:#f8cfa9;
+      color: #d05278;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1806,7 +1804,7 @@ h6,
       }
 
       .faq-item__head {
-        color:#f8cfa9;
+        color: #d05278;
       }
 
       .faq-item__head-btn {
@@ -2352,7 +2350,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color:#f8cfa9;
+  color: #d05278;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2452,11 +2450,11 @@ blockquote,
             }
 
             &:hover {
-              color:#f8cfa9;
-              border-color:#f8cfa9;
+              color: #d05278;
+              border-color: #d05278;
 
               span {
-                color:#f8cfa9;
+                color: #d05278;
               }
             }
           }
@@ -2467,22 +2465,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px#f8cfa9;
-          background-color:#f8cfa9;
+          border: solid 2px #d05278;
+          background-color: #d05278;
 
           &:hover {
-            border-color:#f8cfa9;
+            border-color: #d05278;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color:#f8cfa9;
-          box-shadow: 0 0 5px#f8cfa9;
+          border-color: #d05278;
+          box-shadow: 0 0 5px #d05278;
         }
 
         .rc-slider-track {
-          background-color:#f8cfa9;
+          background-color: #d05278;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2542,7 +2540,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color:#f8cfa9;
+            color: #d05278;
           }
         }
       }
@@ -2640,13 +2638,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color:#f8cfa9;
+    background-color: #d05278;
   }
 
   .irs-handle {
-    background-color:#f8cfa9;
+    background-color: #d05278;
     box-shadow: none;
-    border-color:#f8cfa9;
+    border-color: #d05278;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2654,7 +2652,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color:#f8cfa9;
+      background-color: #d05278;
     }
   }
 
@@ -2726,7 +2724,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color:#f8cfa9;
+  background-color: #d05278;
 }
 
 .checkmark:after {
@@ -2803,7 +2801,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color:#f8cfa9;
+        color: #d05278;
       }
     }
   }
@@ -2876,7 +2874,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid#f8cfa9;
+          border: 2px solid #d05278;
 
           &:hover {
             &:after {
@@ -2888,7 +2886,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid#f8cfa9;
+          border: 2px solid #d05278;
         }
       }
     }
@@ -2972,7 +2970,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid#f8cfa9;
+          border: 2px solid #d05278;
         }
       }
     }
@@ -3082,8 +3080,8 @@ blockquote,
 
     &.active {
       // a {
-      background:#f8cfa9;
-      border-color:#f8cfa9;
+      background: #d05278;
+      border-color: #d05278;
       color: #ffffff;
     }
   }
@@ -3315,7 +3313,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color:#f8cfa9;
+          color: #d05278;
         }
       }
 
@@ -3778,7 +3776,7 @@ blockquote,
           }
 
           &:hover {
-            color:#f8cfa9;
+            color: #d05278;
           }
         }
       }
@@ -3985,7 +3983,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background:#f8cfa9;
+  background: #d05278;
 }
 
 .checkout-purchase {
@@ -4021,7 +4019,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color:#f8cfa9;
+    color: #d05278;
     display: block;
 
     &:hover {
@@ -4142,7 +4140,7 @@ blockquote,
       }
 
       a {
-        color:#f8cfa9;
+        color: #d05278;
         cursor: pointer;
 
         &:hover {
@@ -4359,7 +4357,7 @@ input[type='search']::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color:#f8cfa9;
+            color: #d05278;
           }
         }
 
@@ -4388,7 +4386,7 @@ input[type='search']::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color:#f8cfa9;
+          color: #d05278;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4587,7 +4585,7 @@ input[type='search']::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color:#f8cfa9;
+          color: #d05278;
         }
 
         &-delivered {
@@ -4616,7 +4614,7 @@ input[type='search']::-webkit-search-results-decoration {
           }
 
           &:after {
-            background:#f8cfa9;
+            background: #d05278;
           }
         }
       }
@@ -4719,7 +4717,7 @@ input[type='search']::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color:#f8cfa9;
+      color: #d05278;
     }
 
     &:hover {
@@ -5783,7 +5781,7 @@ input[type='search']::-webkit-search-results-decoration {
   }
 
   .advantages-item__icon {
-    margin-bottom: 10px;
+    margin-bottom: 25px;
   }
 
   h4 {
