--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -2586,6 +2586,7 @@ blockquote,
         margin-left: 15px;
         margin-right: 15px;
         margin-bottom: 56px;
+        border: 1px solid #eeeeee;
 
         & button.addList {
           border: none;
