--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,5 +9,6 @@
 @import 'layout/_footer';
 @import 'layout/_content';
 @import url('https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 @import 'rc-slider/assets/index.css';
 @import 'react-dropdown/style.css';
