--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,8 +4,8 @@ $max-width: 1220px;
 $base-bg: #FFF; 
 $base-font-size: 16px; 
 $base-line-height: 18px; 
-$base-font-family: 'Lato', sans-serif; 
-$custom-font-family: 'Lato', sans-serif; 
+$base-font-family: "Inria Sans", sans-serif; 
+$custom-font-family:"Inria Sans", sans-serif; 
 $link-color: #D05278;
 $transition: all 0.3s linear;
 
