--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -183,7 +183,7 @@ h6,
 
 .saint-text {
   font-family: 'Mrs Saint Delafield';
-  color: #d05278;
+  color: #F8CFA9;
   display: block;
   font-size: 50px;
   text-transform: capitalize;
@@ -198,7 +198,7 @@ h6,
   margin-top: 4px;
 
   span {
-    color: #d05278;
+    color: #F8CFA9;
     position: relative;
 
     &:before {
@@ -330,7 +330,7 @@ h6,
 
       &.active {
         a {
-          background: #d05278;
+          background: #F8CFA9;
           color: #ffffff;
         }
       }
@@ -418,7 +418,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background: #d05278;
+            background: #F8CFA9;
             color: #fff;
           }
 
@@ -427,7 +427,7 @@ h6,
           }
 
           &.active {
-            background: #d05278;
+            background: #F8CFA9;
             color: #fff;
           }
         }
@@ -1052,7 +1052,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color: #d05278;
+      color: #F8CFA9;
     }
   }
 
@@ -1302,7 +1302,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color: #d05278;
+    color: #F8CFA9;
     position: relative;
 
     &:after {
@@ -1318,7 +1318,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color: #d05278;
+        color: #F8CFA9;
       }
     }
 
@@ -1385,7 +1385,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color: #d05278;
+      color: #F8CFA9;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1806,7 +1806,7 @@ h6,
       }
 
       .faq-item__head {
-        color: #d05278;
+        color: #F8CFA9;
       }
 
       .faq-item__head-btn {
@@ -2366,7 +2366,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color: #d05278;
+  color: #F8CFA9;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2467,11 +2467,11 @@ blockquote,
             }
 
             &:hover {
-              color: #d05278;
-              border-color: #d05278;
+              color: #F8CFA9;
+              border-color: #F8CFA9;
 
               span {
-                color: #d05278;
+                color: #F8CFA9;
               }
             }
           }
@@ -2482,22 +2482,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px #d05278;
-          background-color: #d05278;
+          border: solid 2px #F8CFA9;
+          background-color: #F8CFA9;
 
           &:hover {
-            border-color: #d05278;
+            border-color: #F8CFA9;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color: #d05278;
-          box-shadow: 0 0 5px #d05278;
+          border-color: #F8CFA9;
+          box-shadow: 0 0 5px #F8CFA9;
         }
 
         .rc-slider-track {
-          background-color: #d05278;
+          background-color: #F8CFA9;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2557,7 +2557,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color: #d05278;
+            color: #F8CFA9;
           }
         }
       }
@@ -2656,13 +2656,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color: #d05278;
+    background-color: #F8CFA9;
   }
 
   .irs-handle {
-    background-color: #d05278;
+    background-color: #F8CFA9;
     box-shadow: none;
-    border-color: #d05278;
+    border-color: #F8CFA9;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2670,7 +2670,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color: #d05278;
+      background-color: #F8CFA9;
     }
   }
 
@@ -2742,7 +2742,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color: #d05278;
+  background-color: #F8CFA9;
 }
 
 .checkmark:after {
@@ -2819,7 +2819,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color: #d05278;
+        color: #F8CFA9;
       }
     }
   }
@@ -2892,7 +2892,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid #d05278;
+          border: 2px solid #F8CFA9;
 
           &:hover {
             &:after {
@@ -2904,7 +2904,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid #d05278;
+          border: 2px solid #F8CFA9;
         }
       }
     }
@@ -2988,7 +2988,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid #d05278;
+          border: 2px solid #F8CFA9;
         }
       }
     }
@@ -3098,8 +3098,8 @@ blockquote,
 
     &.active {
       // a {
-      background: #d05278;
-      border-color: #d05278;
+      background: #F8CFA9;
+      border-color: #F8CFA9;
       color: #ffffff;
     }
   }
@@ -3331,7 +3331,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color: #d05278;
+          color: #F8CFA9;
         }
       }
 
@@ -3794,7 +3794,7 @@ blockquote,
           }
 
           &:hover {
-            color: #d05278;
+            color: #F8CFA9;
           }
         }
       }
@@ -4001,7 +4001,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #d05278;
+  background: #F8CFA9;
 }
 
 .checkout-purchase {
@@ -4037,7 +4037,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color: #d05278;
+    color: #F8CFA9;
     display: block;
 
     &:hover {
@@ -4158,7 +4158,7 @@ blockquote,
       }
 
       a {
-        color: #d05278;
+        color: #F8CFA9;
         cursor: pointer;
 
         &:hover {
@@ -4375,7 +4375,7 @@ input[type='search']::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color: #d05278;
+            color: #F8CFA9;
           }
         }
 
@@ -4404,7 +4404,7 @@ input[type='search']::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color: #d05278;
+          color: #F8CFA9;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4603,7 +4603,7 @@ input[type='search']::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color: #d05278;
+          color: #F8CFA9;
         }
 
         &-delivered {
@@ -4632,7 +4632,7 @@ input[type='search']::-webkit-search-results-decoration {
           }
 
           &:after {
-            background: #d05278;
+            background: #F8CFA9;
           }
         }
       }
@@ -4735,7 +4735,7 @@ input[type='search']::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color: #d05278;
+      color: #F8CFA9;
     }
 
     &:hover {
