--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -32,7 +32,7 @@
 }
 .icon-info:before {
   content: '\e923';
-  color: #F8CFA9;
+  color: #de8c06;
 }
 .icon-star:before {
   content: '\e91f';
@@ -62,7 +62,7 @@
 }
 .icon-reply:before {
   content: '\e91d';
-  color: #F8CFA9;
+  color: #de8c06;
 }
 .icon-user2:before {
   content: '\e91e';
@@ -70,7 +70,7 @@
 }
 .icon-arrow-md:before {
   content: '\e919';
-  color: #F8CFA9;
+  color: #de8c06;
 }
 .icon-arrow-sm:before {
   content: '\e918';
@@ -117,11 +117,11 @@
 }
 .icon-mail:before {
   content: '\e90b';
-  color: #F8CFA9;
+  color: #de8c06;
 }
 .icon-map-pin:before {
   content: '\e90c';
-  color: #F8CFA9;
+  color: #de8c06;
 }
 .icon-map-pin-big:before {
   content: '\e90d';
@@ -146,7 +146,7 @@
 }
 .icon-smartphone:before {
   content: '\e914';
-  color: #F8CFA9;
+  color: #de8c06;
 }
 .icon-twitter:before {
   content: '\e915';
