--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,7 +6,7 @@ $base-font-size: 16px;
 $base-line-height: 18px; 
 $base-font-family: "Inria Sans", sans-serif; 
 $custom-font-family:"Inria Sans", sans-serif; 
-$link-color: #F8CFA9;
+$link-color: #de8c06;
 $transition: all 0.3s linear;
 
 /* main variables */
