--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,11 +1,11 @@
 /* reset */
-$min-width: 320px; 
+$min-width: 320px;
 $max-width: 1220px;
-$base-bg: #FFF; 
-$base-font-size: 16px; 
-$base-line-height: 18px; 
-$base-font-family: "Inria Sans", sans-serif; 
-$custom-font-family:"Inria Sans", sans-serif; 
+$base-bg: #fff;
+$base-font-size: 16px;
+$base-line-height: 18px;
+$base-font-family: "Merienda", cursive;
+$custom-font-family: "Merienda", cursive;
 $link-color: #de8c06;
 $transition: all 0.3s linear;
 
