--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1232,7 +1232,7 @@ h6,
 
 .detail-block {
   padding-top: 218px;
-  background-image: url(/assets/img/bannerproduct.png);
+  // background-image: url(/assets/img/bannerproduct.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
