done with stay in touch

--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1147,7 +1147,16 @@ h6,
     }
   }
 }
-
+// .toform{
+//   background-color: #fcedea;
+//   display: flex;
+//   align-items: center;
+//   padding: 0 87px 0 60px;
+//   overflow: hidden;
+//   z-index: 1;
+//   margin-top: -5px;
+//   width: calc(100% - 425px);
+// }
 .box-field__row {
   display: flex;
 }
