--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -5,7 +5,7 @@ $base-bg: #fff;
 $base-font-size: 16px;
 $base-line-height: 18px;
 $base-font-family: "Noto Sans", cursive;
-$custom-font-family: "Merienda", cursive;
+$custom-font-family: "Noto Sans", cursive;
 $link-color: #de8c06;
 $transition: all 0.3s linear;
 
