--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,8 +4,8 @@ $max-width: 1220px;
 $base-bg: #fff;
 $base-font-size: 16px;
 $base-line-height: 18px;
-$base-font-family: "Noto Sans", cursive;
-$custom-font-family: "Noto Sans", cursive;
+$base-font-family: "Noto Sans", serif;
+$custom-font-family: "Noto Sans", serif;
 $link-color: #de8c06;
 $transition: all 0.3s linear;
 
