--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1118,11 +1118,11 @@ h6,
         content: '';
         position: absolute;
         left: 47%;
-        top: 50%;
+        top: 60%;
         transform: translate(-50%, -50%);
-        width: 524px;
-        height: 450px;
-        background-image: url(/assets/img/subscribe-img-decor.png);
+        width: 250px;
+        height: 400px;
+        background-image: url(/assets/img/texture.png);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
