--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -19,7 +19,7 @@ footer {
     padding: 60px 0 57px;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.1);
+    border-bottom: 1px solid rgba($color: black, $alpha: 0.1);
     &__social {
       span {
         font-size: 16px;
@@ -95,7 +95,7 @@ footer {
         font-size: 24px;
         line-height: 100%;
         text-transform: capitalize;
-        color: #ffffff;
+        color: #222222;
         margin-bottom: 24px;
         font-family: 'Tenor Sans';
       }
@@ -155,7 +155,7 @@ footer {
             .footer-nav__col-phones {
               a {
                 display: block;
-                color: #ffffff;
+                color: #bbbbbb;
                 font-size: 20px;
                 margin-bottom: 8px;
                 line-height: normal;
@@ -228,6 +228,7 @@ footer {
   }
   .footer-nav__col-title {
     font-size: 20px;
+    color: black;
   }
   .footer-nav__col ul li a,
   .footer-copy {
@@ -293,6 +294,7 @@ footer {
   }
   .footer-nav__col-title {
     text-align: center;
+    color: black;
     width: 100%;
   }
 }
