--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -739,7 +739,7 @@ h6,
           transform: translate(-50%, -50%);
           width: 166px;
           height: 66px;
-          background-image: url(/assets/img/top-categories-decor.png);
+          background-color: white;
           background-size: contain;
           background-repeat: no-repeat;
           background-position: center;
