--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -155,7 +155,7 @@ footer {
             .footer-nav__col-phones {
               a {
                 display: block;
-                color: #bbbbbb;
+                color: #999999;
                 font-size: 20px;
                 margin-bottom: 8px;
                 line-height: normal;
