--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,12 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
+@font-face {
+  font-family: 'icomoon';
+  src: url('/assets/fonts/icomoon/icomoon.eot?1cf6lm');
+  src: url('/assets/fonts/icomoon/icomoon.eot?1cf6lm#iefix')
+      format('embedded-opentype'),
+    url('/assets/fonts/icomoon/icomoon.ttf?1cf6lm') format('truetype'),
+    url('/assets/fonts/icomoon/icomoon.woff?1cf6lm') format('woff'),
+    url('/assets/fonts/icomoon/icomoon.svg?1cf6lm#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+
 body {
   font-family: 'Roboto', sans-serif; /* Set Roboto as the default font */
 }
 
+
+
 [class^='icon-'],
 [class*=' icon-'] {
-  font-family: 'Roboto' !important; /* Update to Roboto font */
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -18,6 +36,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 /* Remove the Icomoon font */
 * {
