--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -7054,6 +7054,17 @@ input[type='search']::-webkit-search-results-decoration {
     height: 80px;
   }
 }
-.icon-trash:hover{
-  color: red;
+
+
+.header-options input[type="text"] {
+  border: 1px solid #ccc; /* Light border for a subtle outline */
+  border-radius: 5px; /* Rounded corners */
+  padding: 5px 10px; /* Space inside the input */
+  font-size: 14px; /* Adjust text size */
+  outline: none; /* Remove blue outline on focus */
+  transition: border-color 0.3s ease; /* Smooth border transition */
+}
+
+.header-options input[type="text"]:focus {
+  border-color: #888; /* Darker border on focus */
 }
