--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,30 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 @font-face {
-  font-family: 'icomoon';
-  src: url('/assets/fonts/icomoon/icomoon.eot?1cf6lm');
-  src: url('/assets/fonts/icomoon/icomoon.eot?1cf6lm#iefix')
-      format('embedded-opentype'),
-    url('/assets/fonts/icomoon/icomoon.ttf?1cf6lm') format('truetype'),
-    url('/assets/fonts/icomoon/icomoon.woff?1cf6lm') format('woff'),
-    url('/assets/fonts/icomoon/icomoon.svg?1cf6lm#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("/assets/fonts/icomoon/icomoon.eot?1cf6lm");
+  src: url("/assets/fonts/icomoon/icomoon.eot?1cf6lm#iefix")
+      format("embedded-opentype"),
+    url("/assets/fonts/icomoon/icomoon.ttf?1cf6lm") format("truetype"),
+    url("/assets/fonts/icomoon/icomoon.woff?1cf6lm") format("woff"),
+    url("/assets/fonts/icomoon/icomoon.svg?1cf6lm#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-
-body {
-  font-family: 'Roboto', sans-serif; /* Set Roboto as the default font */
+@font-face {
+  font-family: "BetterGrade";
+  src: url("../../../assets/fonts/BetterGrade-519DV.ttf") format("ttf"),
+    url("../../../assets/fonts/BetterGrade-519DV.ttf") format("ttf");
 }
 
+@font-face {
+  font-family: "BetterGrade";
+  src: url("../../../assets/fonts/BetterGrade-519DV.ttf") format("truetype"); /* Correct format */
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "BetterGrade";
+  src: url("/assets/fonts/BetterGrade-519DV.ttf") format("truetype");
+}
 
+body {
+  font-family: "Better Grade", sans-serif; /* Set Roboto as the default font */
+}
 
-[class^='icon-'],
-[class*=' icon-'] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -37,148 +51,145 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 /* Remove the Icomoon font */
 * {
-  font-family: 'Roboto', sans-serif !important; /* Ensure all elements use Roboto */
+  font-family: "Roboto", sans-serif ; /* Ensure all elements use Roboto */
 }
 
-
 .icon-google:before {
-  content: '\e924';
+  content: "\e924";
   color: #fff;
 }
 .icon-info:before {
-  content: '\e923';
+  content: "\e923";
   color: #de8c06;
 }
 .icon-star:before {
-  content: '\e91f';
+  content: "\e91f";
 }
 .icon-step1:before {
-  content: '\e920';
+  content: "\e920";
 }
 .icon-step2:before {
-  content: '\e921';
+  content: "\e921";
   color: #999;
 }
 .icon-step3:before {
-  content: '\e922';
+  content: "\e922";
   color: #999;
 }
 .icon-comment:before {
-  content: '\e91a';
+  content: "\e91a";
   color: #999;
 }
 .icon-date:before {
-  content: '\e91b';
+  content: "\e91b";
   color: #999;
 }
 .icon-eye:before {
-  content: '\e91c';
+  content: "\e91c";
   color: #999;
 }
 .icon-reply:before {
-  content: '\e91d';
+  content: "\e91d";
   color: #de8c06;
 }
 .icon-user2:before {
-  content: '\e91e';
+  content: "\e91e";
   color: #999;
 }
 .icon-arrow-md:before {
-  content: '\e919';
+  content: "\e919";
   color: #de8c06;
 }
 .icon-arrow-sm:before {
-  content: '\e918';
+  content: "\e918";
   color: #bbb;
 }
 .icon-arrow:before {
-  content: '\e902';
+  content: "\e902";
   color: #999;
 }
 .icon-24:before {
-  content: '\e900';
+  content: "\e900";
 }
 .icon-2:before {
-  content: '\e901';
+  content: "\e901";
 }
 .icon-arrow-lg:before {
-  content: '\e903';
+  content: "\e903";
   color: #fff;
 }
 .icon-cart:before {
-  content: '\e904';
+  content: "\e904";
 }
 .icon-close:before {
-  content: '\e905';
+  content: "\e905";
   color: #fff;
 }
 .icon-facebook:before {
-  content: '\e906';
+  content: "\e906";
   color: #fff;
 }
 .icon-heart:before {
-  content: '\e907';
+  content: "\e907";
 }
 .icon-helpline:before {
-  content: '\e908';
+  content: "\e908";
 }
 .icon-in:before {
-  content: '\e909';
- color: #fff;
+  content: "\e909";
+  color: #fff;
 }
 .icon-insta:before {
-  content: '\e90a';
- color: #fff;
+  content: "\e90a";
+  color: #fff;
 }
 .icon-mail:before {
-  content: '\e90b';
+  content: "\e90b";
   color: #de8c06;
 }
 .icon-map-pin:before {
-  content: '\e90c';
+  content: "\e90c";
   color: #de8c06;
 }
 .icon-map-pin-big:before {
-  content: '\e90d';
+  content: "\e90d";
 }
 .icon-natural:before {
-  content: '\e90e';
+  content: "\e90e";
 }
 .icon-organic:before {
-  content: '\e90f';
+  content: "\e90f";
 }
 .icon-phone:before {
-  content: '\e910';
+  content: "\e910";
 }
 .icon-quality:before {
-  content: '\e911';
+  content: "\e911";
 }
 .icon-search:before {
-  content: '\e912';
+  content: "\e912";
 }
 .icon-shipping:before {
-  content: '\e913';
+  content: "\e913";
 }
 .icon-smartphone:before {
-  content: '\e914';
+  content: "\e914";
   color: #de8c06;
 }
 .icon-twitter:before {
-  content: '\e915';
+  content: "\e915";
   color: #fff;
-
 }
-.icon-user:before { 
-  content: '\e916';
+.icon-user:before {
+  content: "\e916";
 }
 .icon-video:before {
-  content: '\e917';
+  content: "\e917";
 }
 .icon-whatsapp:before {
-  content: '\ea93';
+  content: "\ea93";
 }
 
 .icon-youtube:before {
