--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,5 +10,6 @@
 @import 'layout/_content';
 @import 'rc-slider/assets/index.css';
 @import 'react-dropdown/style.css';
+@import url('https://fonts.cdnfonts.com/css/better-grade');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
