--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -182,7 +182,7 @@ h6,
 
 .saint-text {
   font-family: "Mrs Saint Delafield";
-  color: #de8c06;
+  color: #ab0909;
   display: block;
   font-size: 50px;
   text-transform: capitalize;
@@ -197,7 +197,7 @@ h6,
   margin-top: 4px;
 
   span {
-    color: #de8c06;
+    color: #ab0909;
     position: relative;
 
     &:before {
@@ -245,6 +245,7 @@ h6,
   .saint-text {
     font-size: 100px;
     padding-left: 9px;
+    font-weight: 500;
   }
 
   .main-text {
@@ -332,7 +333,7 @@ h6,
 
       &.active {
         a {
-          background: #de8c06;
+          background: #ab0909;
           color: #ffffff;
         }
       }
@@ -420,7 +421,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background: #de8c06;
+            background: #ab0909;
             color: #fff;
           }
 
@@ -429,7 +430,7 @@ h6,
           }
 
           &.active {
-            background: #de8c06;
+            background: #ab0909;
             color: #fff;
           }
         }
@@ -1052,7 +1053,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color: #de8c06;
+      color: #ab0909;
     }
   }
 
@@ -1311,7 +1312,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color: #de8c06;
+    color: #ab0909;
     position: relative;
 
     &:after {
@@ -1327,7 +1328,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color: #de8c06;
+        color: #ab0909;
       }
     }
 
@@ -1394,7 +1395,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color: #de8c06;
+      color: #ab0909;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1815,7 +1816,7 @@ h6,
       }
 
       .faq-item__head {
-        color: #de8c06;
+        color: #ab0909;
       }
 
       .faq-item__head-btn {
@@ -2337,7 +2338,7 @@ h6,
   width: 56px;
   height: 56px;
   border-radius: 50%;
-  background: #de8c06;
+  background: #ab0909;
   -webkit-mask: radial-gradient(
     circle closest-side at 50% 40%,
     #0000 94%,
@@ -2379,7 +2380,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color: #de8c06;
+  color: #ab0909;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2479,11 +2480,11 @@ blockquote,
             }
 
             &:hover {
-              color: #de8c06;
-              border-color: #de8c06;
+              color: #ab0909;
+              border-color: #ab0909;
 
               span {
-                color: #de8c06;
+                color: #ab0909;
               }
             }
           }
@@ -2494,22 +2495,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px #de8c06;
-          background-color: #de8c06;
+          border: solid 2px #ab0909;
+          background-color: #ab0909;
 
           &:hover {
-            border-color: #de8c06;
+            border-color: #ab0909;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color: #de8c06;
-          box-shadow: 0 0 5px #de8c06;
+          border-color: #ab0909;
+          box-shadow: 0 0 5px #ab0909;
         }
 
         .rc-slider-track {
-          background-color: #de8c06;
+          background-color: #ab0909;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2569,7 +2570,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color: #de8c06;
+            color: #ab0909;
           }
         }
       }
@@ -2667,13 +2668,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color: #de8c06;
+    background-color: #ab0909;
   }
 
   .irs-handle {
-    background-color: #de8c06;
+    background-color: #ab0909;
     box-shadow: none;
-    border-color: #de8c06;
+    border-color: #ab0909;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2681,7 +2682,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color: #de8c06;
+      background-color: #ab0909;
     }
   }
 
@@ -2753,7 +2754,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color: #de8c06;
+  background-color: #ab0909;
 }
 
 .checkmark:after {
@@ -2830,7 +2831,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color: #de8c06;
+        color: #ab0909;
       }
     }
   }
@@ -2903,7 +2904,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid #de8c06;
+          border: 2px solid #ab0909;
 
           &:hover {
             &:after {
@@ -2915,7 +2916,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid #de8c06;
+          border: 2px solid #ab0909;
         }
       }
     }
@@ -2999,7 +3000,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid #de8c06;
+          border: 2px solid #ab0909;
         }
       }
     }
@@ -3109,8 +3110,8 @@ blockquote,
 
     &.active {
       // a {
-      background: #de8c06;
-      border-color: #de8c06;
+      background: #ab0909;
+      border-color: #ab0909;
       color: #ffffff;
     }
   }
@@ -3342,7 +3343,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color: #de8c06;
+          color: #ab0909;
         }
       }
 
@@ -3805,7 +3806,7 @@ blockquote,
           }
 
           &:hover {
-            color: #de8c06;
+            color: #ab0909;
           }
         }
       }
@@ -4012,7 +4013,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #de8c06;
+  background: #ab0909;
 }
 
 .checkout-purchase {
@@ -4048,7 +4049,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color: #de8c06;
+    color: #ab0909;
     display: block;
 
     &:hover {
@@ -4169,7 +4170,7 @@ blockquote,
       }
 
       a {
-        color: #de8c06;
+        color: #ab0909;
         cursor: pointer;
 
         &:hover {
@@ -4386,7 +4387,7 @@ input[type="search"]::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color: #de8c06;
+            color: #ab0909;
           }
         }
 
@@ -4415,7 +4416,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color: #de8c06;
+          color: #ab0909;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4614,7 +4615,7 @@ input[type="search"]::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color: #de8c06;
+          color: #ab0909;
         }
 
         &-delivered {
@@ -4643,7 +4644,7 @@ input[type="search"]::-webkit-search-results-decoration {
           }
 
           &:after {
-            background: #de8c06;
+            background: #ab0909;
           }
         }
       }
@@ -4746,7 +4747,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color: #de8c06;
+      color: #ab0909;
     }
 
     &:hover {
@@ -7111,5 +7112,5 @@ input[type="search"]::-webkit-search-results-decoration {
   transform: scale(1.05);
 }
 .search-result:hover h5 {
-  color: #de8c06;
+  color: #ab0909;
 }
