--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,7 +6,7 @@ $base-font-size: 16px;
 $base-line-height: 18px;
 $base-font-family: "Noto Sans", serif;
 $custom-font-family: "Noto Sans", serif;
-$link-color: #de8c06;
+$link-color: #ab0909;
 $transition: all 0.3s linear;
 
 /* main variables */
