--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -53,7 +53,7 @@ body {
 
 /* Remove the Icomoon font */
 * {
-  font-family: "Roboto", sans-serif ; /* Ensure all elements use Roboto */
+  font-family: "Roboto", sans-serif; /* Ensure all elements use Roboto */
 }
 
 .icon-google:before {
@@ -62,7 +62,7 @@ body {
 }
 .icon-info:before {
   content: "\e923";
-  color: #ab0909;
+  color: #d47e00;
 }
 .icon-star:before {
   content: "\e91f";
@@ -92,7 +92,7 @@ body {
 }
 .icon-reply:before {
   content: "\e91d";
-  color: #ab0909;
+  color: #d47e00;
 }
 .icon-user2:before {
   content: "\e91e";
@@ -100,7 +100,7 @@ body {
 }
 .icon-arrow-md:before {
   content: "\e919";
-  color: #ab0909;
+  color: #d47e00;
 }
 .icon-arrow-sm:before {
   content: "\e918";
@@ -147,11 +147,11 @@ body {
 }
 .icon-mail:before {
   content: "\e90b";
-  color: #ab0909;
+  color: #d47e00;
 }
 .icon-map-pin:before {
   content: "\e90c";
-  color: #ab0909;
+  color: #d47e00;
 }
 .icon-map-pin-big:before {
   content: "\e90d";
@@ -176,7 +176,7 @@ body {
 }
 .icon-smartphone:before {
   content: "\e914";
-  color: #ab0909;
+  color: #d47e00;
 }
 .icon-twitter:before {
   content: "\e915";
