--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1,4 +1,6 @@
 //main styles
+@import url("https://fonts.cdnfonts.com/css/buttershine-serif");
+@import url("https://fonts.cdnfonts.com/css/calibri-light");
 
 .main-wrapper {
   padding: 0 0 0 0;
@@ -21,7 +23,7 @@
 }
 
 .wrapper {
-  font-family: "Better Grade";
+  font-family: "Buttershine Serif";
   min-width: $min-width;
   max-width: $max-width;
   padding: 0 40px 0 40px;
@@ -150,6 +152,7 @@ h6,
   font-weight: bold;
   font-size: 16px;
   border-radius: 20px;
+  font-family: "Calibri Light" !important ;
   color: #ffffff;
   display: inline-block;
   transition: $transition;
@@ -182,21 +185,23 @@ h6,
 }
 
 .saint-text {
-  color: #D47E00;
+  color: #d47e00;
+  font-family: "Buttershine Serif" !important ;
   display: block;
-  font-size: 40px;
+  font-size: 80px;
   text-transform: capitalize;
 }
 
 .main-text {
   display: block;
   color: #222222;
-  font-size: 40px;
+  font-size: 48px;
   margin-bottom: 30px;
   margin-top: 4px;
+  font-family: "Buttershine Serif" !important ;
 
   span {
-    color: #D47E00;
+    color: #d47e00;
     position: relative;
 
     &:before {
@@ -229,6 +234,7 @@ h6,
 
   &__content {
     margin-left: -8px;
+    font-family: "Buttershine Serif", sans-serif !important ;
   }
 
   &__decor {
@@ -240,7 +246,7 @@ h6,
   }
 
   .saint-text {
-    font-size: 40px;
+    font-size: 56px;
     font-weight: 500;
   }
 
@@ -251,6 +257,7 @@ h6,
   p {
     max-width: 465px;
     font-size: 20px;
+    font-family: "Calibri Light" !important ;
     letter-spacing: 1px;
     line-height: 150%;
     font-family: "Tenor Sans";
@@ -328,7 +335,7 @@ h6,
 
       &.active {
         a {
-          background: #D47E00;
+          background: #d47e00;
           color: #ffffff;
         }
       }
@@ -416,7 +423,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background: #D47E00;
+            background: #d47e00;
             color: #fff;
           }
 
@@ -425,7 +432,7 @@ h6,
           }
 
           &.active {
-            background: #D47E00;
+            background: #d47e00;
             color: #fff;
           }
         }
@@ -1048,7 +1055,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color: #D47E00;
+      color: #d47e00;
     }
   }
 
@@ -1307,7 +1314,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color: #D47E00;
+    color: #d47e00;
     position: relative;
 
     &:after {
@@ -1323,7 +1330,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color: #D47E00;
+        color: #d47e00;
       }
     }
 
@@ -1390,7 +1397,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color: #D47E00;
+      color: #d47e00;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1434,7 +1441,7 @@ h6,
   }
 
   .saint-text {
-    font-size: 50px;
+    font-size: 56px;
     padding-left: 0px;
   }
 
@@ -1811,7 +1818,7 @@ h6,
       }
 
       .faq-item__head {
-        color: #D47E00;
+        color: #d47e00;
       }
 
       .faq-item__head-btn {
@@ -2333,7 +2340,7 @@ h6,
   width: 56px;
   height: 56px;
   border-radius: 50%;
-  background: #D47E00;
+  background: #d47e00;
   -webkit-mask: radial-gradient(
     circle closest-side at 50% 40%,
     #0000 94%,
@@ -2375,7 +2382,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color: #D47E00;
+  color: #d47e00;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2475,11 +2482,11 @@ blockquote,
             }
 
             &:hover {
-              color: #D47E00;
-              border-color: #D47E00;
+              color: #d47e00;
+              border-color: #d47e00;
 
               span {
-                color: #D47E00;
+                color: #d47e00;
               }
             }
           }
@@ -2490,22 +2497,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px #D47E00;
-          background-color: #D47E00;
+          border: solid 2px #d47e00;
+          background-color: #d47e00;
 
           &:hover {
-            border-color: #D47E00;
+            border-color: #d47e00;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color: #D47E00;
-          box-shadow: 0 0 5px #D47E00;
+          border-color: #d47e00;
+          box-shadow: 0 0 5px #d47e00;
         }
 
         .rc-slider-track {
-          background-color: #D47E00;
+          background-color: #d47e00;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2565,7 +2572,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color: #D47E00;
+            color: #d47e00;
           }
         }
       }
@@ -2663,13 +2670,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color: #D47E00;
+    background-color: #d47e00;
   }
 
   .irs-handle {
-    background-color: #D47E00;
+    background-color: #d47e00;
     box-shadow: none;
-    border-color: #D47E00;
+    border-color: #d47e00;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2677,7 +2684,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color: #D47E00;
+      background-color: #d47e00;
     }
   }
 
@@ -2749,7 +2756,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color: #D47E00;
+  background-color: #d47e00;
 }
 
 .checkmark:after {
@@ -2826,7 +2833,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color: #D47E00;
+        color: #d47e00;
       }
     }
   }
@@ -2899,7 +2906,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid #D47E00;
+          border: 2px solid #d47e00;
 
           &:hover {
             &:after {
@@ -2911,7 +2918,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid #D47E00;
+          border: 2px solid #d47e00;
         }
       }
     }
@@ -2995,7 +3002,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid #D47E00;
+          border: 2px solid #d47e00;
         }
       }
     }
@@ -3105,8 +3112,8 @@ blockquote,
 
     &.active {
       // a {
-      background: #D47E00;
-      border-color: #D47E00;
+      background: #d47e00;
+      border-color: #d47e00;
       color: #ffffff;
     }
   }
@@ -3338,7 +3345,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color: #D47E00;
+          color: #d47e00;
         }
       }
 
@@ -3801,7 +3808,7 @@ blockquote,
           }
 
           &:hover {
-            color: #D47E00;
+            color: #d47e00;
           }
         }
       }
@@ -4008,7 +4015,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #D47E00;
+  background: #d47e00;
 }
 
 .checkout-purchase {
@@ -4044,7 +4051,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color: #D47E00;
+    color: #d47e00;
     display: block;
 
     &:hover {
@@ -4165,7 +4172,7 @@ blockquote,
       }
 
       a {
-        color: #D47E00;
+        color: #d47e00;
         cursor: pointer;
 
         &:hover {
@@ -4382,7 +4389,7 @@ input[type="search"]::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color: #D47E00;
+            color: #d47e00;
           }
         }
 
@@ -4411,7 +4418,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color: #D47E00;
+          color: #d47e00;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4610,7 +4617,7 @@ input[type="search"]::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color: #D47E00;
+          color: #d47e00;
         }
 
         &-delivered {
@@ -4639,7 +4646,7 @@ input[type="search"]::-webkit-search-results-decoration {
           }
 
           &:after {
-            background: #D47E00;
+            background: #d47e00;
           }
         }
       }
@@ -4742,7 +4749,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color: #D47E00;
+      color: #d47e00;
     }
 
     &:hover {
@@ -5114,7 +5121,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .discount-info .saint-text {
-    font-size: 50px;
+    font-size: 40px;
   }
 
   .discount {
@@ -5679,19 +5686,19 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .main-block .saint-text {
-    font-size: 80px;
+    font-size: 45px;
   }
 
   .main-text {
-    font-size: 50px;
+    font-size: 39px;
   }
 
   .main-block p {
-    font-size: 16px;
+    font-size: 13px;
   }
 
   .main-block .btn {
-    margin-top: 30px;
+    margin-top: 21px;
   }
 
   .trending-tabs li {
@@ -5736,7 +5743,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .saint-text {
-    font-size: 40px;
+    font-size: 10px;
   }
 
   h2 {
@@ -5777,7 +5784,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .discount-info .saint-text {
-    font-size: 45px;
+    font-size: 30px;
     padding-right: 20px;
   }
 
@@ -7107,5 +7114,5 @@ input[type="search"]::-webkit-search-results-decoration {
   transform: scale(1.05);
 }
 .search-result:hover h5 {
-  color: #D47E00;
+  color: #d47e00;
 }
