--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -34,6 +34,13 @@ header {
       // margin-left: 79px;
       margin-left: 60px;
     }
+    ul li a i.icon-tiktok:before {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ffffff'%3E%3Cpath d='M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.18 6.18 0 0 0-1-.05A6.74 6.74 0 0 0 5 20.8a6.74 6.74 0 0 0 10.86-5.22v-7a4.85 4.85 0 0 0 3.77 1.52v-3.4a4.85 4.85 0 0 1-1-.01z'/%3E%3C/svg%3E");
+    }
+    ul li a:hover i.icon-tiktok:before {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ffffff'%3E%3Cpath d='M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.18 6.18 0 0 0-1-.05A6.74 6.74 0 0 0 5 20.8a6.74 6.74 0 0 0 10.86-5.22v-7a4.85 4.85 0 0 0 3.77 1.52v-3.4a4.85 4.85 0 0 1-1-.01z'/%3E%3C/svg%3E");
+      opacity: 0.8;
+    }
     &-close {
       position: absolute;
       right: 14px;
@@ -259,7 +266,7 @@ header {
     min-width: 110px;
   }
   .header-content {
-    padding: 72px 40px 0;
+    padding: 20px 40px 0;
   }
 }
 
@@ -309,7 +316,8 @@ header {
     margin-left: 0;
   }
   .header-content {
-    padding: 55px 20px 0;
+    // padding: 55px 20px 0;
+    padding: 20px 20px 0;
   }
 }
 
